packages/kit/test/apps/basics/src/routes/errors/page-endpoint/get-explicit/+page.server.js
import { error } from '@sveltejs/kit';

export const load = () => {
	throw error(400, 'oops');
};
